            </createTable>
            <addNotNullConstraint tableName="NOTNULL_NAMING_TEST" columnName="testcol2" constraintName="NN_NAMING_TEST_TESTCOL2_NN" />
        </changeSet>

    - Snapshotting an Oracle schema now extract the TABLESPACE property of each table (if it is not the default
      tablespace for the connecting user).

    Incompatibilities
    =================

    Microsoft SQL Server:
    - Microsoft SQL Server versions before SQL Server 2008 are not supported anymore and DB-Manul will refuse to connect
      to old instances. Also, SQL Server <2008 is now (2017-05-26) completely desupported by Microsoft.

    - When snapshotting a Microsoft SQL Server database or using the generic data type names in change sets, DB-Manul will
      map the deprecated column types text, ntext and image into varchar(max), nvarchar(max) and varbinary(max) column
      types according to the recommendations at
      https://docs.microsoft.com/en-us/sql/t-sql/data-types/ntext-text-and-image-transact-sql
      (commit cf667c6945a5902c54030146ca6929541b7d10f1)

    - Change sets targeted at MySQL/MariaDB and MS SQL Server must now specify tableName in dropIndex changes
      (although ommitting this was allowed before, it produced syntax errors in the generated SQL)

    - Because DB-Manul is now based in JDK 8, you must upgrade your JDBC driver to version 6.1.0.jre8 or newer.

    MySQL and MariaDB:
    - Because MySQL and MariaDB start to diverge (currently only in relatively minor details, but this is expected to
            become worse over time), DB-Manul treats them as two completely separate DBMS. As a consequence, you will
            need to use the MariaDB JDBC driver when connecting to a MariaDB server, and the MySQL JDBC driver when
            connecting to a MySQL server. You can have both JDBC drivers in the classpath and DB-Manul will use the
            right one as long as your JDBC URL is configured correctly.
